2013-07-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el: Check whether the mule-vesion variable is defined.

2013-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mailcap.el: Removed to resolve compatibility problem when run in
	expanded place.

2013-03-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Many encoder/decoder functions now always encode/decode regardless
	buffer's multibyteness.
	* mime-def.el (mime-charset-decode-string)
	(mime-charset-encode-string): New functions.

	* mime-parse.el (mime-decode-parameter-value)
	(mime-encode-extended-parameter): Use them.

	* eword-decode.el (eword-decode-unstructured-field-body)
	(eword-decode-and-unfold-unstructured-field-body)
	(eword-decode-unfolded-unstructured-field-body)
	(eword-decode-encoded-words, eword-analyze-quoted-string)
	(eword-analyze-comment, eword-analyze-atom): Use
	mime-charset-decode-string instead of decode-mime-charset-string.

	* eword-encode.el (tm-eword::encoded-word-length)
	(tm-eword::encoded-word-length): Use mime-charset-encode-string
	instead of encode-mime-charset-string.

2012-08-14  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-unfold-strip-leading-tab): New variable.
	(std11-unfold-string): Use it.  Workaround for incorrect folding.

2012-08-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel-q-ccl.el (q-encoding-ccl-decode-string): Remove duplicate
	definition for Emacs 23.1.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (ew-find-string-rule): Define own function for
	Emacs23 which has APEL with detect-mime-charset-string for it.
	(ew-find-charset-rule): Define only when needed.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (ew-find-string-rule): New function.
	(eword-encode-phrase-to-rword-list): Use it.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (tm-eword::string-to-ruled-words): Define own
	function for Emacs23 which has APEL with
	detect-mime-charset-string for it.